// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should Mistakes render correctly With one mistake 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`Should Mistakes render correctly With zero mistakes 1`] = `
<div
  className="game__mistakes"
/>
`;
